fix: remove overflow

--- a/apps/matific/src/app/app.component.scss
+++ b/apps/matific/src/app/app.component.scss
@@ -21,5 +21,4 @@
 
 .main {
   height: calc(100vh - 3.5rem);
-  overflow: hidden;
 }
